--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://www.paypal.com/sdk/js?client-id=Ab3HrCZXCR6I43hUvdGb1U_Z4tsbH6nNy7Cylm4dbyIxEt0flv00Y8gjAHIamAKacsDHn6TJOxhMqznf"></script>
+    <script async src="https://pay.google.com/gp/p/js/pay.js"onload="onGooglePayLoaded()"></script>
     <title>AZ</title>
   </head>
   <body>
