--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="alphabet.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta name="description"content=" AZ E-Commerce is a simple store for shopping All products "/>
+
+    <meta name="keywords" content="AZ-Ecommerce, E-commerce , Shopping , Store">
+
     <meta name="theme-color" content="#000000" />
-    <meta
-    name="description"
-    content="Web site created using create-react-app"
-    />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://www.paypal.com/sdk/js?client-id=Ab3HrCZXCR6I43hUvdGb1U_Z4tsbH6nNy7Cylm4dbyIxEt0flv00Y8gjAHIamAKacsDHn6TJOxhMqznf"></script>
     <script async src="https://pay.google.com/gp/p/js/pay.js"onload="onGooglePayLoaded()"></script>
-    <title>AZ</title>
+    <title>AZ E-Commerce | Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
