--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,14 @@
     <link rel="icon" href="alphabet.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta name="author" content="Abdelaziz Sleem">
+
     <meta name="description"content=" AZ E-Commerce is a simple store for shopping All products "/>
 
     <meta name="keywords" content="AZ-Ecommerce, E-commerce , Shopping , Store">
 
     <meta name="theme-color" content="#000000" />
-    
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
