--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <meta name="description" content=" AZ E-Commerce is a simple store for shopping All products " />
 
-  <meta name="keywords" content="AZ-Ecommerce, E-commerce , Shopping , Store">
+  <meta name="keywords" content="AZ-Ecommerce, E-commerce , Shopping , Store, Products, Watch, phone, mobile, ">
 
   <meta name="theme-color" content="#000000" />
 
@@ -25,7 +25,7 @@
   <script
     src="https://www.paypal.com/sdk/js?client-id=Ab3HrCZXCR6I43hUvdGb1U_Z4tsbH6nNy7Cylm4dbyIxEt0flv00Y8gjAHIamAKacsDHn6TJOxhMqznf"></script>
   <script async src="https://pay.google.com/gp/p/js/pay.js" onload="onGooglePayLoaded()"></script>
-  <title>AZ E-Commerce | Store</title>
+  <title>AZ E-Commerce | Store |Shopping For Every thing</title>
 
 </head>
 
