--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="author" content="Abdelaziz Sleem">
+
+  <!--how to put other links in meta in html  -->
+  <meta name="DC.identifier" content="https://az-e-commerce.vercel.app/Login#top">
+
+  <meta property="og:title" content="Alphabet E-Commerce Login Page" />
+  <meta property="og:description" content="This is the login page of Alphabet e-commerce website." />
+  <meta property="og:image" content="./az (1).png"/>
+  <meta property="og:url"content="https://az-e-commerce.vercel.app"/>
+
   <meta name="google-site-verification" content="XmY_2KMylvB5fL9pedfQYmV4Pqj1NmhwVvt07VIVzG4" />
 
   <meta name="description" content=" AZ E-Commerce is a simple store for shopping All products " />
@@ -16,15 +25,22 @@
   <meta name="theme-color" content="#000000" />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script
     src="https://www.paypal.com/sdk/js?client-id=Ab3HrCZXCR6I43hUvdGb1U_Z4tsbH6nNy7Cylm4dbyIxEt0flv00Y8gjAHIamAKacsDHn6TJOxhMqznf"></script>
+
   <script async src="https://pay.google.com/gp/p/js/pay.js" onload="onGooglePayLoaded()"></script>
+
   <title>AZ E-Commerce | Store |Shopping For Every thing</title>
 
 </head>
